hphp/hack/test/typecheck/nullsafe/nullsafe-double-nullable-generic.php.rust_elab.exp
File "nullsafe-double-nullable-generic.php", line 30, characters 14-36:
`await` can only be used inside `async` functions (NastCheck[3003])
